# zpass

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  tag.yml
src/: README.md  cmd_create.rs  cmd_remove.rs  cmd_search.rs  cmd_update.rs  item.rs  main.rs  operations.rs  storage.rs
