[package]
authors = ["Mao Nabeta <mao.nabeta@gmail.com>"]
categories = ["command-line-utilities"]
description = "zpass is a password management tool."
documentation = "https://github.com/nabetama/zpass"
edition = "2021"
exclude = [
  "/.github/",
]
homepage = "https://github.com/nabetama/zpass"
license = "Apache-2.0"
name = "zpass"
repository = "https://github.com/nabetama/zpass"
version = "0.1.1"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
console = "0.15.8"
dialoguer = {version = "0.11.0", features = ["fuzzy-select"]}
dirs = "5.0.1"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"

[profile.deb]
debug = false
inherits = "release"

[profile.release]
debug = 1
